<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ImageView_GambarItemNegara"
            android:layout_width="270px"
            android:layout_height="300px"
            android:layout_marginBottom="4dp"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/TextView_ItemNamaNegara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/ImageView_GambarItemNegara"
            android:layout_toRightOf="@id/ImageView_GambarItemNegara"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/nama_negara" />

        <TextView
            android:id="@+id/TextView_ItemRincianNegara"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_button_cardview"
            android:layout_below="@id/TextView_ItemNamaNegara"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/ImageView_GambarItemNegara"
            android:layout_toRightOf="@id/ImageView_GambarItemNegara"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/rincian_negara" />

        <LinearLayout
            android:id="@+id/layout_button_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/ImageView_GambarItemNegara"
            android:layout_toRightOf="@id/ImageView_GambarItemNegara"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_lihat_destinasi_wisata"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_lihat_destinasi_wisata"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>